5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1674_1107.log
== TEST (2019-04-30 11:43:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("dia de hoje: "))
b = int(input("num de dias apos "))

a=8%2
print(a)
-- OUTPUT:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:43:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a=8%2
print(a)
-- OUTPUT:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:43:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a=8%2
print(a)
-- OUTPUT:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:44:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = 1%3
print(a)


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:44:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = 1%3
print(a)


-- EXECUTION TIME:
0.14566
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
1
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:44:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = 1%3
print(a)


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:52:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos "))

futuro = (dia+diafuturo)%7

if (dia>=0) and (dia<=6):
	if (diafuturo > 0):
	   if (dia==0):
			x = "domingo"
	   elif (dia==1):
		   x = "segunda"
	   elif (dia==2):
		   x = "terca"
	   elif (dia==3):
		   x = "quarta"
	   elif (dia==4):
		   x = "quinta"
	   elif (dia==5):
		   x = "sexta"
	   elif (dia==6):
		   x = "sabado"
		if (futuro==0):
			y = "domingo"
		elif (futuro==0):
			y = "segunda"
	   elif (futuro==1):
		   y = "segunda"
	   elif (futuro==2):
		   y = "terca"
	   elif (futuro==3):
		   y = "quarta"
	   elif (futuro==4):
		   y = "quinta"
	   elif (futuro==5):
		   y = "sexta"
	   elif (futuro==6):
		   y = "sabado"



-- ERROR:
File "XXXX", line 12
    x = "domingo"
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:52:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos "))

futuro = (dia+diafuturo)%7

if (dia>=0) and (dia<=6):
	if (diafuturo > 0):
	   if (dia==0):
			x = "domingo"
	   elif (dia==1):
		   x = "segunda"
	   elif (dia==2):
		   x = "terca"
	   elif (dia==3):
		   x = "quarta"
	   elif (dia==4):
		   x = "quinta"
	   elif (dia==5):
		   x = "sexta"
	   elif (dia==6):
		   x = "sabado"
		if (futuro==0):
			y = "domingo"
		elif (futuro==0):
			y = "segunda"
	   elif (futuro==1):
		   y = "segunda"
	   elif (futuro==2):
		   y = "terca"
	   elif (futuro==3):
		   y = "quarta"
	   elif (futuro==4):
		   y = "quinta"
	   elif (futuro==5):
		   y = "sexta"
	   elif (futuro==6):
		   y = "sabado"



-- ERROR:
File "XXXX", line 12
    x = "domingo"
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:52:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos "))

futuro = (dia+diafuturo)%7

if (dia>=0) and (dia<=6):
	if (diafuturo > 0):
	   if (dia==0):
			x = "domingo"
	   elif (dia==1):
		   x = "segunda"
	   elif (dia==2):
		   x = "terca"
	   elif (dia==3):
		   x = "quarta"
	   elif (dia==4):
		   x = "quinta"
	   elif (dia==5):
		   x = "sexta"
	   elif (dia==6):
		   x = "sabado"
		if (futuro==0):
			y = "domingo"
		elif (futuro==0):
			y = "segunda"
	   elif (futuro==1):
		   y = "segunda"
	   elif (futuro==2):
		   y = "terca"
	   elif (futuro==3):
		   y = "quarta"
	   elif (futuro==4):
		   y = "quinta"
	   elif (futuro==5):
		   y = "sexta"
	   elif (futuro==6):
		   y = "sabado"



-- ERROR:
File "XXXX", line 12
    x = "domingo"
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:52:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos "))

futuro = (dia+diafuturo)%7

if (dia>=0) and (dia<=6):
	if (diafuturo > 0):
	   if (dia==0):
			x = "domingo"
	   elif (dia==1):
		   x = "segunda"
	   elif (dia==2):
		   x = "terca"
	   elif (dia==3):
		   x = "quarta"
	   elif (dia==4):
		   x = "quinta"
	   elif (dia==5):
		   x = "sexta"
	   elif (dia==6):
		   x = "sabado"
		if (futuro==0):
			y = "domingo"
		elif (futuro==0):
			y = "segunda"
	   elif (futuro==1):
		   y = "segunda"
	   elif (futuro==2):
		   y = "terca"
	   elif (futuro==3):
		   y = "quarta"
	   elif (futuro==4):
		   y = "quinta"
	   elif (futuro==5):
		   y = "sexta"
	   elif (futuro==6):
		   y = "sabado"



-- ERROR:
File "XXXX", line 12
    x = "domingo"
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:54:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos "))

futuro = (dia+diafuturo)%7

if (dia>=0) and (dia<=6):
	if (diafuturo > 0):
		if (dia==0):
			x = "domingo"
	   elif (dia==1):
		   x = "segunda"
	   elif (dia==2):
		   x = "terca"
	   elif (dia==3):
		   x = "quarta"
	   elif (dia==4):
		   x = "quinta"
	   elif (dia==5):
		   x = "sexta"
	   elif (dia==6):
		   x = "sabado"
		if (futuro==0):
			y = "domingo"
		elif (futuro==0):
			y = "segunda"
	   elif (futuro==1):
		   y = "segunda"
	   elif (futuro==2):
		   y = "terca"
	   elif (futuro==3):
		   y = "quarta"
	   elif (futuro==4):
		   y = "quinta"
	   elif (futuro==5):
		   y = "sexta"
	   elif (futuro==6):
		   y = "sabado"



-- ERROR:
File "XXXX", line 13
    elif (dia==1):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:57:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos "))

futuro = (dia+diafuturo)%7

if (dia>=0) and (dia<=6):
	if (diafuturo > 0):
		if (dia==0):
			x = "domingo"
		elif (dia==1):
			x = "segunda"
		elif (dia==2):
			x = "terca"
		elif (dia==3):
			x = "quarta"
		elif (dia==4):
			x = "quinta"
		elif (dia==5):
			x = "sexta"
		elif (dia==6):
			x = "sabado"
		if (futuro==0):
			y = "domingo"
		elif (futuro==0):
			y = "segunda"
		elif (futuro==1):
			y = "segunda"
		elif (futuro==2):
			y = "terca"
		elif (futuro==3):
			y = "quarta"
		elif (futuro==4):
			y = "quinta"
		elif (futuro==5):
			y = "sexta"
		elif (futuro==6):
			y = "sabado"



-- ERROR:
File "XXXX", line 13
    elif (dia==1):
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:59:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos "))

futuro = (dia+diafuturo)%7
if (dia!=1 and 2 and 3 and 4 and 5 and 6):
	print("A entrada", dia, "eh invalida")
else:
if (dia>=0) and (dia<=6):
	if (diafuturo > 0):
		if (dia==0):
			x = "domingo"
		elif (dia==1):
			x = "segunda"
		elif (dia==2):
			x = "terca"
		elif (dia==3):
			x = "quarta"
		elif (dia==4):
			x = "quinta"
		elif (dia==5):
			x = "sexta"
		elif (dia==6):
			x = "sabado"
		if (futuro==0):
			y = "domingo"
		elif (futuro==0):
			y = "segunda"
		elif (futuro==1):
			y = "segunda"
		elif (futuro==2):
			y = "terca"
		elif (futuro==3):
			y = "quarta"
		elif (futuro==4):
			y = "quinta"
		elif (futuro==5):
			y = "sexta"
		elif (futuro==6):
			y = "sabado"



-- ERROR:
File "XXXX", line 11
    if (dia>=0) and (dia<=6):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:00:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos "))

futuro = (dia+diafuturo)%7
if (dia!=1 and 2 and 3 and 4 and 5 and 6):
	print("A entrada", dia, "eh invalida")
else:
	if (dia>=0) and (dia<=6):
	if (diafuturo > 0):
		if (dia==0):
			x = "domingo"
		elif (dia==1):
			x = "segunda"
		elif (dia==2):
			x = "terca"
		elif (dia==3):
			x = "quarta"
		elif (dia==4):
			x = "quinta"
		elif (dia==5):
			x = "sexta"
		elif (dia==6):
			x = "sabado"
		if (futuro==0):
			y = "domingo"
		elif (futuro==0):
			y = "segunda"
		elif (futuro==1):
			y = "segunda"
		elif (futuro==2):
			y = "terca"
		elif (futuro==3):
			y = "quarta"
		elif (futuro==4):
			y = "quinta"
		elif (futuro==5):
			y = "sexta"
		elif (futuro==6):
			y = "sabado"



-- ERROR:
File "XXXX", line 12
    if (diafuturo > 0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:00:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos "))

futuro = (dia+diafuturo)%7
if (dia!=1 and 2 and 3 and 4 and 5 and 6):
	print("A entrada", dia, "eh invalida")
else:
	if (dia>=0) and (dia<=6):
		if (diafuturo > 0):
		if (dia==0):
			x = "domingo"
		elif (dia==1):
			x = "segunda"
		elif (dia==2):
			x = "terca"
		elif (dia==3):
			x = "quarta"
		elif (dia==4):
			x = "quinta"
		elif (dia==5):
			x = "sexta"
		elif (dia==6):
			x = "sabado"
		if (futuro==0):
			y = "domingo"
		elif (futuro==0):
			y = "segunda"
		elif (futuro==1):
			y = "segunda"
		elif (futuro==2):
			y = "terca"
		elif (futuro==3):
			y = "quarta"
		elif (futuro==4):
			y = "quinta"
		elif (futuro==5):
			y = "sexta"
		elif (futuro==6):
			y = "sabado"



-- ERROR:
File "XXXX", line 13
    if (dia==0):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:02:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos "))

futuro = (dia+diafuturo)%7
if (dia!=1 and 2 and 3 and 4 and 5 and 6):
	print("A entrada", dia, "eh invalida")
else:
	if (dia>=0) and (dia<=6):
		if (diafuturo > 0):
			if (dia==0):
				x = "domingo"
			elif (dia==1):
				x = "segunda"
			elif (dia==2):
				x = "terca"
			elif (dia==3):
				x = "quarta"
			elif (dia==4):
				x = "quinta"
			elif (dia==5):
				x = "sexta"
			elif (dia==6):
				x = "sabado"
			if (futuro==0):
				y = "domingo"
			elif (futuro==0):
				y = "segunda"
			elif (futuro==1):
				y = "segunda"
			elif (futuro==2):
				y = "terca"
			elif (futuro==3):
				y = "quarta"
			elif (futuro==4):
				y = "quinta"
			elif (futuro==5):
				y = "sexta"
			elif (futuro==6):
				y = "sabado"



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:07:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos: "))

futuro = (dia+diafuturo)%7
if (dia!=1 and 2 and 3 and 4 and 5 and 6):
	print("A entrada", dia, "eh invalida")
else:
	if (dia>=0) and (dia<=6):
		if (diafuturo > 0):
			if (dia==0):
				x = "domingo"
			elif (dia==1):
				x = "segunda"
			elif (dia==2):
				x = "terca"
			elif (dia==3):
				x = "quarta"
			elif (dia==4):
				x = "quinta"
			elif (dia==5):
				x = "sexta"
			elif (dia==6):
				x = "sabado"
			if (futuro==0):
				y = "domingo"
			elif (futuro==0):
				y = "segunda"
			elif (futuro==1):
				y = "segunda"
			elif (futuro==2):
				y = "terca"
			elif (futuro==3):
				y = "quarta"
			elif (futuro==4):
				y = "quinta"
			elif (futuro==5):
				y = "sexta"
			elif (futuro==6):
				y = "sabado"
			print("Hoje eh", x, "e o dia futuro eh", y)



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:08:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos: "))

futuro = (dia+diafuturo)%7

	if (dia>=0) and (dia<=6):
		if (diafuturo > 0):
			if (dia==0):
				x = "domingo"
			elif (dia==1):
				x = "segunda"
			elif (dia==2):
				x = "terca"
			elif (dia==3):
				x = "quarta"
			elif (dia==4):
				x = "quinta"
			elif (dia==5):
				x = "sexta"
			elif (dia==6):
				x = "sabado"
			if (futuro==0):
				y = "domingo"
			elif (futuro==0):
				y = "segunda"
			elif (futuro==1):
				y = "segunda"
			elif (futuro==2):
				y = "terca"
			elif (futuro==3):
				y = "quarta"
			elif (futuro==4):
				y = "quinta"
			elif (futuro==5):
				y = "sexta"
			elif (futuro==6):
				y = "sabado"
			print("Hoje eh", x, "e o dia futuro eh", y)



-- ERROR:
File "XXXX", line 9
    if (dia>=0) and (dia<=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:09:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos: "))

futuro = (dia+diafuturo)%7

if (dia>=0) and (dia<=6):
	if (diafuturo > 0):
		if (dia==0):
			x = "domingo"
		elif (dia==1):
			x = "segunda"
		elif (dia==2):
			x = "terca"
		elif (dia==3):
			x = "quarta"
		elif (dia==4):
			x = "quinta"
		elif (dia==5):
			x = "sexta"
		elif (dia==6):
			x = "sabado"
		if (futuro==0):
			y = "domingo"
		elif (futuro==0):
			y = "segunda"
		elif (futuro==1):
			y = "segunda"
		elif (futuro==2):
			y = "terca"
		elif (futuro==3):
			y = "quarta"
		elif (futuro==4):
			y = "quinta"
		elif (futuro==5):
			y = "sexta"
		elif (futuro==6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)



-- ERROR:
File "XXXX", line 9
    if (dia>=0) and (dia<=6):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:10:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos: "))

futuro = (dia+diafuturo)%7

if (dia>=0) and (dia<=6):
	if (diafuturo > 0):
		if (dia==0):
			x = "domingo"
		elif (dia==1):
			x = "segunda"
		elif (dia==2):
			x = "terca"
		elif (dia==3):
			x = "quarta"
		elif (dia==4):
			x = "quinta"
		elif (dia==5):
			x = "sexta"
		elif (dia==6):
			x = "sabado"
		if (futuro==0):
			y = "domingo"
		elif (futuro==0):
			y = "segunda"
		elif (futuro==1):
			y = "segunda"
		elif (futuro==2):
			y = "terca"
		elif (futuro==3):
			y = "quarta"
		elif (futuro==4):
			y = "quinta"
		elif (futuro==5):
			y = "sexta"
		elif (futuro==6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", diafuturo, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:11:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos: "))

futuro = (dia+diafuturo)%7

if (dia>=0) and (dia<=6):
	if (diafuturo > 0):
		if (dia==0):
			x = "domingo"
		elif (dia==1):
			x = "segunda"
		elif (dia==2):
			x = "terca"
		elif (dia==3):
			x = "quarta"
		elif (dia==4):
			x = "quinta"
		elif (dia==5):
			x = "sexta"
		elif (dia==6):
			x = "sabado"
		if (futuro==0):
			y = "domingo"
		elif (futuro==0):
			y = "segunda"
		elif (futuro==1):
			y = "segunda"
		elif (futuro==2):
			y = "terca"
		elif (futuro==3):
			y = "quarta"
		elif (futuro==4):
			y = "quinta"
		elif (futuro==5):
			y = "sexta"
		elif (futuro==6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", diafuturo, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")



-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:11:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia de hoje: "))
diafuturo = int(input("num de dias apos: "))

futuro = (dia+diafuturo)%7

if (dia>=0) and (dia<=6):
	if (diafuturo > 0):
		if (dia==0):
			x = "domingo"
		elif (dia==1):
			x = "segunda"
		elif (dia==2):
			x = "terca"
		elif (dia==3):
			x = "quarta"
		elif (dia==4):
			x = "quinta"
		elif (dia==5):
			x = "sexta"
		elif (dia==6):
			x = "sabado"
		if (futuro==0):
			y = "domingo"
		elif (futuro==0):
			y = "segunda"
		elif (futuro==1):
			y = "segunda"
		elif (futuro==2):
			y = "terca"
		elif (futuro==3):
			y = "quarta"
		elif (futuro==4):
			y = "quinta"
		elif (futuro==5):
			y = "sexta"
		elif (futuro==6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", diafuturo, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")



-- EXECUTION TIME:
0.229807
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
